--- a/script/bintray.gradle
+++ b/script/bintray.gradle
@@ -19,7 +19,7 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 
 afterEvaluate {
     javadoc.classpath += files(android.libraryVariants.collect { variant ->
-        variant.javaCompile.classpath.files
+        variant.getJavaCompileProvider().get().classpath.files
     })
 }
 
