--- a/script/bintray.gradle
+++ b/script/bintray.gradle
@@ -18,8 +18,8 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 }
 
 afterEvaluate {
-    javadoc.classpath += files(android.libraryVariants.collect { variant ->
-        variant.getJavaCompileProvider().get().classpath.files
+    javadoc.classpath += files(android.libraryVariants.collect {
+        variant -> variant.getJavaCompileProvider().get().classpath.files
     })
 }
 
